# rustbow

./: Cargo.toml  README.md
src/: color_gen.rs  config.rs  frame.rs  lib.rs  main.rs  parser.rs  render.rs
src/color_gen/: hue.rs  perlin.rs
src/config/: color.rs  set.rs
