[package]
name = "rustbow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
color = "0.3.3"
crossterm = "0.29.0"
rand = "0.10.1"
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.7.2"
